# ceibwr

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
ceibwr/: base.py  beiro.py  cerddi.py  cleciadur.py  cysonion.py  cytseinedd.py  datrysiad.py  datryswr_cerdd.py  datryswr_cynghanedd.py  datryswr_cytseinedd.py  datryswr_llinell.py  datryswr_odl.py  datryswr_pennill.py  datryswr_triawd.py  gair.py  llinell.py  mesur.py  odlau.py  odliadur.py  peiriant.py  pennill.py  profion_cwpled.py  profion_llinell.py  profion_odl.py  profion_pennill.py  settings.py
data/static/: GeiriauJGJ.txt
docs/source/: api.rst  conf.py  index.rst  rhagair.rst  sandpit.rst  trosolwg.rst
src/ceibwr/: __init__.py  awdl.py  base.py  celfi.py  cerdd.py  cleciadur.py  corfan.py  cwpled.py  cynghanedd.py  cysonion.py  cytseinedd.py  datrysiad.py  datryswr_cerdd.py  datryswr_cwatrain.py  datryswr_cwpled.py  datryswr_cynghanedd.py  datryswr_cytseinedd.py  datryswr_llinell.py  datryswr_odl.py  datryswr_pennill.py  gair.py  llinell.py  main.py  mesur.py  nod.py  odlau.py  odliadur.py  peiriant.py  pennill.py  profion_cwpled.py  profion_cynghanedd.py  profion_cytseinedd.py  profion_gair.py  profion_llinell.py  rhaniad.py  seinyddwr.py  settings.py  sillaf.py
src/ceibwr/data/: enwau_lleoedd.txt  llusgiadurCC.json  odliadurCC.json  odliadurRS.json
tests/: test_cytseinedd.py  test_gair.py  test_nod.py  test_odl.py
