[project]
name = "ceibwr"
version = "0.1"
description = "Meddalwedd Gynganeddol"
authors = [
    {name = "dimbyd", email = "evansd8@cf.ac.uk"}
]
maintainers = [
    {name = "dimbyd", email = "evansd8@cf.ac.uk"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geomstats", "numpy", "matplotlib", "lxml", "pyaml", "tabulate", "importlib", "python-slugify",
]

[project.urls]
"Repository" = "https://github.com/dimbyd/ceibwr"
"Issues" = "https://github.com/dimbyd/ceibwr/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ceibwr = "ceibwr.main:main"

# include-package-dat is true by default, so we don't need the following
# [tool.setuptools]
# include-package-data = true

# scanning for namespaces in the `src` directory is true by default so we don't need the following.
# [tool.setuptools.packages.find]
# namespaces = true
# where = ["src"]

[tool.setuptools.package-data]
"ceibwr.data" = ["*.txt", "*.json"]
